# name: TestCreate.test[force_choice]
  '/samples/fb085f7f'
---
# name: TestCreate.test[force_choice].1
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'diagnostics',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'fb085f7f',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'test',
      },
      'workflow': 'create_sample',
    },
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': <class 'list'> [
    ],
    'ready': False,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test[force_choice].2
  <class 'dict'> {
    '_id': 'fb085f7f',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'diagnostics',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'id': 'bf1b993c',
    },
    'labels': <class 'list'> [
      1,
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': <class 'dict'> {
      'id': 0,
    },
    'subtractions': <class 'list'> [
      'apple',
    ],
    'user': <class 'dict'> {
      'id': 'test',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test[none]
  '/samples/fb085f7f'
---
# name: TestCreate.test[none].1
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'fb085f7f',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'test',
      },
      'workflow': 'create_sample',
    },
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': <class 'list'> [
    ],
    'ready': False,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test[none].2
  <class 'dict'> {
    '_id': 'fb085f7f',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'id': 'bf1b993c',
    },
    'labels': <class 'list'> [
      1,
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': <class 'dict'> {
      'id': 0,
    },
    'subtractions': <class 'list'> [
      'apple',
    ],
    'user': <class 'dict'> {
      'id': 'test',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test[users_primary_group]
  '/samples/fb085f7f'
---
# name: TestCreate.test[users_primary_group].1
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'technician',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'fb085f7f',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'test',
      },
      'workflow': 'create_sample',
    },
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': <class 'list'> [
    ],
    'ready': False,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test[users_primary_group].2
  <class 'dict'> {
    '_id': 'fb085f7f',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'technician',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'id': 'bf1b993c',
    },
    'labels': <class 'list'> [
      1,
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': <class 'dict'> {
      'id': 0,
    },
    'subtractions': <class 'list'> [
      'apple',
    ],
    'user': <class 'dict'> {
      'id': 'test',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreateCache.test[key]
  '/samples/test/caches/a1b2c3d4'
---
# name: TestCreateCache.test[key].1
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'files': <class 'list'> [
    ],
    'id': 'a1b2c3d4',
    'key': 'aodp-abcdefgh',
    'legacy': False,
    'missing': False,
    'paired': False,
    'ready': False,
    'sample': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: TestEdit.test
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'test_sample',
    'notes': 'This is a test.',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'peach',
        'name': 'Peach',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'kellylopez',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestEdit.test_label_exists[json]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Labels do not exist: [1]',
  }
---
# name: TestEdit.test_subtraction_exists[json]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Subtractions do not exist: bar',
  }
---
# name: TestFindSamples.test_labels[None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_labels[labels1]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_labels[labels2]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_labels[labels3]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_page_perpage[2-1]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 2,
    'per_page': 2,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_page_perpage[2-2]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 2,
    'page_count': 2,
    'per_page': 2,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_page_perpage[None-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[None-/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[None-/spaces/0/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[gv-/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[gv-/spaces/0/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[sp-/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[sp-/spaces/0/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_workflows[None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_workflows[workflows1]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_workflows[workflows2]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_workflows[workflows3]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestGet.test_get[administrator][json]
  <class 'dict'> {
    'all_read': False,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': False,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
      <class 'dict'> {
        'id': 'pear',
        'name': 'Pear',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'kellylopez',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestGet.test_get[all_read][json]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': False,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
      <class 'dict'> {
        'id': 'pear',
        'name': 'Pear',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'kellylopez',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestGet.test_get[group_read][json]
  <class 'dict'> {
    'all_read': False,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'technicians',
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
      <class 'dict'> {
        'id': 'pear',
        'name': 'Pear',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'kellylopez',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestGet.test_get[not_in_group][json]
  <class 'dict'> {
    'id': 'insufficient_rights',
    'message': 'Insufficient rights',
  }
---
# name: TestGet.test_get[owner][json]
  <class 'dict'> {
    'all_read': False,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': False,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
      <class 'dict'> {
        'id': 'pear',
        'name': 'Pear',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestUploadReads.test_upload_reads[True]
  <class 'dict'> {
    'id': 1,
    'name': 'reads_1.fq.gz',
    'name_on_disk': 'reads_1.fq.gz',
    'sample': 'test',
    'size': 9081,
    'upload': 1,
    'uploaded_at': '2015-10-06T20:00:00Z',
  }
---
# name: test_analyze[None]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 'test_analysis',
    'index': <class 'dict'> {
      'id': 'foobar',
      'version': 3,
    },
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'test',
      },
      'workflow': 'pathoscope_bowtie',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'sample': <class 'dict'> {
      'id': 'test',
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
    'workflow': 'pathoscope_bowtie',
  }
---
# name: test_finalize[quality]
  <class 'dict'> {
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'id': 'test',
    'labels': <class 'list'> [
    ],
    'paired': False,
    'quality': <class 'dict'> {
    },
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': None,
        'upload': None,
        'uploaded_at': None,
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_finalize_cache[quality]
  <class 'dict'> {
    'id': 'test',
    'key': 'aodp-abcdefgh',
    'quality': <class 'dict'> {
    },
    'ready': True,
    'sample': <class 'dict'> {
      'id': 'test',
    },
  }
---
# name: test_find_analyses[Baz-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_1',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': <class 'dict'> {
          'id': '7cf872dc',
        },
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'baz',
          'name': 'Baz',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'pathoscope_bowtie',
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_2',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': <class 'dict'> {
          'id': 'foo',
        },
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'baz',
          'name': 'Baz',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
          <class 'dict'> {
            'id': 'foo',
            'name': 'Malus domestica',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'pathoscope_bowtie',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_analyses[None-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_1',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': <class 'dict'> {
          'id': '7cf872dc',
        },
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'baz',
          'name': 'Baz',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'pathoscope_bowtie',
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_2',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': <class 'dict'> {
          'id': 'foo',
        },
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'baz',
          'name': 'Baz',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
          <class 'dict'> {
            'id': 'foo',
            'name': 'Malus domestica',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'pathoscope_bowtie',
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_3',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': None,
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'foo',
          'name': 'Foo',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
          <class 'dict'> {
            'id': 'foo',
            'name': 'Malus domestica',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflow': 'pathoscope_bowtie',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_get_cache[None]
  <class 'dict'> {
    'id': 'bar',
    'key': 'abc123',
    'program': 'skewer-0.2.2',
    'sample': <class 'dict'> {
      'id': 'foo',
    },
  }
---
# name: test_upload_artifact[None]
  <class 'dict'> {
    'id': 1,
    'name': 'small.fq',
    'name_on_disk': 'small.fq',
    'sample': 'test',
    'size': 3130756,
    'type': 'fastq',
    'uploaded_at': '2015-10-06T20:00:00Z',
  }
---
# name: test_upload_artifact_cache[None]
  <class 'dict'> {
    'id': 1,
    'key': 'aodp-abcdefgh',
    'name': 'small.fq',
    'name_on_disk': 'small.fq',
    'sample': 'test',
    'size': 3130756,
    'type': 'fastq',
    'uploaded_at': '2015-10-06T20:00:00Z',
  }
---
# name: test_upload_reads_cache[False]
  <class 'dict'> {
    'id': 1,
    'key': 'aodp-abcdefgh',
    'name': 'reads_1.fq.gz',
    'name_on_disk': 'reads_1.fq.gz',
    'sample': 'test',
    'size': 9081,
    'uploaded_at': '2015-10-06T20:00:00Z',
  }
---
# name: test_upload_reads_cache[True]
  <class 'dict'> {
    'id': 2,
    'key': 'aodp-abcdefgh',
    'name': 'reads_2.fq.gz',
    'name_on_disk': 'reads_2.fq.gz',
    'sample': 'test',
    'size': 9081,
    'uploaded_at': '2015-10-06T20:00:00Z',
  }
---
